# absinthe

./: .gitignore  pyproject.toml
absinthe/: .env.example  main.py
absinthe/api/: routes.py
src/: main.py
src/api/: routes.py
